Fix issue with border flickering. Still an issue with artifcats when resizing each box

--- a/ui/src/components/resizable/ResizableBorder/styles.module.css
+++ b/ui/src/components/resizable/ResizableBorder/styles.module.css
@@ -1,3 +1,19 @@
 .border {
   border: 5px solid #adb5bd;
 }
+
+/*
+For future reference
+*/
+/* .verticalLine {
+  position: absolute;
+  width: 1px; /* Line width */
+  top: 0;
+  left: 0;
+  background-color: black; /* Line color */
+  height: 100%; /* Override in-line if you want specific height. */
+  float: left; /* Causes the line to float to left of content. 
+    You can instead use position:absolute or display:inline-block
+    if this fits better with your design */
+  color: red;
+} */
